--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.3",
